# py_cindex

./: .travis.yml  LICENSE  README.md  setup.cfg  setup.py
c_index/: __init__.py  c_index.py  c_index_R_interface.py  c_index_R_interface_test.py  c_index_test.py  test.R
src/c_index/: NbClust.R  RData.csv  RData_labels.csv  __init__.py
src/tests/: c_index_R_interface_test.py  c_index_test.py
