[metadata]
name = c_index
version = 0.0.2
author = John Vorsten
author_email = vorstenjohn@gmail.com
description = Calculates Hubert & Levin C index - internal cluster quality index
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnvorsten/py_cindex
project_urls = 
    Bug Tracker = https://github.com/johnvorstn/py_cindex/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
keywords = clustering, R, CIndex

[options]
install_requires = [
    #'rpy2', # Not required unless using extension
    'pandas',
    'numpy',
    'scipy',
    'scikit-learn',]
package_dir = 
    = src/c_index
packages = find:
python_required = >=3

